@@ -1,6 +1,7 @@
 Version 0.2.4, 03.06.08
 - accept both async_ and asynch_ as prefixes for workling method invocation. thank you francois beausoleil!
 - added memcached configuration options to starling.yml. see example yml for details. thank you larry diehl!
+- re-raise exceptions if there is a problem adding an item to the starling queue. thank you digitalronin!
 - applied patches from dave dupre: http://davedupre.com/2008/03/29/ruby-background-tasks-with-starling-part-2/
   - added threading to starling poller. One polling thread can now be set to run per queue. 
   - default routing no longer producing queues like a:b:c, this was conflicting with MemCacheClient#stat
